--- a/index.html
+++ b/index.html
@@ -422,8 +422,7 @@
                                 <h5 class="newsletter-form__h5">Join the Newsletter and get all
                                     updates with ease in one place</h5>
                                 <div class="newsletter-form__input">
-                                    <input class="input" placeholder="ENTER YOUR EMAIL ADDRESS" type="email" name=""
-                                        id="">
+                                    <input class="input" placeholder="Your mail" type="email" name="" id="">
                                 </div>
                                 <div class="newsletter-form__btn">
                                     <button class="btn btn--orange btn--alt">submit</button>
