--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="top">
 
     <!-- ============= Header ============= -->
     <header class="header">
@@ -383,7 +383,7 @@
                                     </div>
                                     <div class="review__quote">
                                         <div class="review__quotemark">
-                                            <img src="img/icons/quote-mark.png" width="60" alt="">
+                                            <img src="img/icons/quote-mark.png" width="45" alt="">
                                         </div>
                                         <div class="review__text">
                                             money in bitcoins makes it easy for me to understand the in and out on
@@ -529,7 +529,9 @@
             </div>
         </div>
     </footer>
-
+    <div class="toTop" id="toTop" data-scroll=".top">
+        <img src="img/icons/up.svg" height="90" alt="">
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/main.js"></script>
 
