--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
                                     <div class="menu__arrow">
                                         <img src="img/icons/arrow-down.png" width="17" alt="">
                                     </div>
+
+                                </div>
+                                <div class="submenu">
+                                    <div class="submenu__item">USD</div>
+                                    <div class="submenu__item">Ruble</div>
+                                    <div class="submenu__item">Euro</div>
                                 </div>
                             </div>
                             <div class="menu__item">
@@ -75,6 +81,12 @@
                                     <div class="menu__arrow">
                                         <img src="img/icons/arrow-down.png" width="17" alt="">
                                     </div>
+
+                                </div>
+                                <div class="submenu">
+                                    <div class="submenu__item">USD</div>
+                                    <div class="submenu__item">Ruble</div>
+                                    <div class="submenu__item">Euro</div>
                                 </div>
                             </div>
                             <div class="menu__item">
@@ -85,6 +97,11 @@
                                     <div class="menu__name">recent</div>
                                     <div class="menu__arrow">
                                         <img src="img/icons/arrow-down.png" width="17" alt="">
+                                    </div>
+                                    <div class="submenu">
+                                        <div class="submenu__item">USD</div>
+                                        <div class="submenu__item">Ruble</div>
+                                        <div class="submenu__item">Euro</div>
                                     </div>
                                 </div>
                             </div>
